--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Monos
+title: JDhyeok's Tech Blog
 email: jdhyeok97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by jekyll
+  Donghyeok Jang :D
 # baseurl: "/" # the subpath of your site, e.g. /blog
-# url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: JDhyeok
 highlighter: rouge
 svg:
